# OpenAI-GPT4o_GItHub_Code_Reviewer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_tests/: test.py
app/: api.py  exceptions.py  github.py  gpt.py  main.py  models.py  review_service.py
tests/: conftest.py  test_api.py  test_github.py  test_gpt.py  test_review_service.py
